--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -1806,7 +1806,156 @@
         "colab_type": "text"
       },
       "source": [
-        "###Creating Train/Validation/Test Data"
+        "###Creating Train/Validation/Test Data\n",
+        "First we need to take out the 3 test images we want to work with."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1JIS6Yrw2nXh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "9a1e5717-6c12-48f8-d628-64be02f35f73"
+      },
+      "source": [
+        "import math\n",
+        "import os\n",
+        "import random\n",
+        "import shutil\n",
+        "from collections import defaultdict\n",
+        "from os.path import abspath, join, basename, exists\n",
+        "\n",
+        "#choose 002, 075, and 101\n",
+        "test_choice=['002','075','101']\n",
+        "\n",
+        "#make processing directory\n",
+        "process_dir = '/content/gdrive/My Drive/slides_sample/'\n",
+        "if not os.path.exists(process_dir):\n",
+        "  os.makedirs(process_dir)\n",
+        "  print('Process directory made: ',process_dir)\n",
+        "else:\n",
+        "  print('Process dir exists')\n",
+        "if not os.path.exists(process_dir+'test/'):\n",
+        "  os.makedirs(process_dir+'test/')\n",
+        "  print('Test directory made: ',process_dir+'test/')\n",
+        "else:\n",
+        "  print('Test dir exists')\n",
+        "if not os.path.exists(process_dir+'test/tumor/'):\n",
+        "  os.makedirs(process_dir+'test/tumor/')\n",
+        "  print('Test tumor directory made: ',process_dir+'test/tumor/')\n",
+        "else:\n",
+        "  print('Test tumor dir exists')\n",
+        "if not os.path.exists(process_dir+'test/no_tumor/'):\n",
+        "  os.makedirs(process_dir+'test/no_tumor/')\n",
+        "  print('Test no tumor directory made: ',process_dir+'test/no_tumor/')\n",
+        "else:\n",
+        "  print('Test no tumor dir exists')"
+      ],
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Process dir exists\n",
+            "Test dir exists\n",
+            "Test tumor directory made:  /content/gdrive/My Drive/slides_sample/test/tumor/\n",
+            "Test no tumor directory made:  /content/gdrive/My Drive/slides_sample/test/no_tumor/\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wK9zbbVc4a_q",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 255
+        },
+        "outputId": "cf895f29-bbb9-4d14-af41-74a09622d56e"
+      },
+      "source": [
+        "#move all test images and data to test\n",
+        "test_data=[]\n",
+        "for row in master_patches:\n",
+        "  if row['slideId'] in test_choice:\n",
+        "    if row['tumor']==1:\n",
+        "      newpath=join(process_dir+'test/tumor/', basename(row['patch_path']))\n",
+        "    else:\n",
+        "      newpath=join(process_dir+'test/no_tumor/', basename(row['patch_path']))\n",
+        "\n",
+        "    shutil.move(row['patch_path'], newpath)\n",
+        "    row['patch_path']=newpath\n",
+        "    test_data.append(row)\n",
+        "print(pd.DataFrame(test_data))"
+      ],
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "     slideId                                         patch_path  ...  patch_y  tumor\n",
+            "0        002  /content/gdrive/My Drive/slides_sample/test/no...  ...        4      0\n",
+            "1        002  /content/gdrive/My Drive/slides_sample/test/no...  ...        4      0\n",
+            "2        002  /content/gdrive/My Drive/slides_sample/test/no...  ...        4      0\n",
+            "3        002  /content/gdrive/My Drive/slides_sample/test/no...  ...        4      0\n",
+            "4        002  /content/gdrive/My Drive/slides_sample/test/no...  ...        4      0\n",
+            "...      ...                                                ...  ...      ...    ...\n",
+            "2179     101  /content/gdrive/My Drive/slides_sample/test/no...  ...       33      0\n",
+            "2180     101  /content/gdrive/My Drive/slides_sample/test/no...  ...       33      0\n",
+            "2181     101  /content/gdrive/My Drive/slides_sample/test/no...  ...       33      0\n",
+            "2182     101  /content/gdrive/My Drive/slides_sample/test/no...  ...       33      0\n",
+            "2183     101  /content/gdrive/My Drive/slides_sample/test/no...  ...       34      0\n",
+            "\n",
+            "[2184 rows x 7 columns]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KbxivOqa8f_Q",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "acfef259-080d-4bcf-84a1-03a6a6faeb81"
+      },
+      "source": [
+        "#check metrics of test data\n",
+        "print(pd.DataFrame(test_data).groupby('tumor').count())"
+      ],
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "       slideId  patch_path  level  size  patch_x  patch_y\n",
+            "tumor                                                    \n",
+            "0         2037        2037   2037  2037     2037     2037\n",
+            "1          147         147    147   147      147      147\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cW_5_Zu-8r_Q",
+        "colab_type": "text"
+      },
+      "source": [
+        "So it looks like we are left with roughly 1200 tumor samples for train and validation.  So we will random sample 1300 non tumor patches and use all tumor patches for our dataset."
       ]
     },
     {
@@ -1814,10 +1963,161 @@
       "metadata": {
         "id": "MCLMx3N5xRly",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 289
+        },
+        "outputId": "8d602673-7f94-4fa0-a368-d261abdfc22d"
+      },
+      "source": [
+        "#randomly shuffly the data\n",
+        "random_data = master_df.sample(frac=1)\n",
+        "\n",
+        "#new sample data\n",
+        "sample_data=[]\n",
+        "for index, row in random_data.iterrows():\n",
+        "  print(row)\n",
+        "  sample_data.append(row)\n",
+        "  break\n",
+        "print(sample_data)"
+      ],
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "slideId                                                     078\n",
+            "patch_path    /content/gdrive/My Drive/slides_lvl4/no_tumor/...\n",
+            "level                                                         4\n",
+            "size                                                        128\n",
+            "patch_x                                                       7\n",
+            "patch_y                                                      41\n",
+            "tumor                                                         0\n",
+            "Name: 9105, dtype: object\n",
+            "[slideId                                                     078\n",
+            "patch_path    /content/gdrive/My Drive/slides_lvl4/no_tumor/...\n",
+            "level                                                         4\n",
+            "size                                                        128\n",
+            "patch_x                                                       7\n",
+            "patch_y                                                      41\n",
+            "tumor                                                         0\n",
+            "Name: 9105, dtype: object]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R0JCU8M5yDVP",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "#functions to help split the data into the folders we need\n",
+        "import math\n",
+        "import os\n",
+        "import random\n",
+        "import shutil\n",
+        "from collections import defaultdict\n",
+        "from os.path import abspath, join, basename, exists\n",
+        "\n",
+        "\n",
+        "def get_containing_folder_name(path):\n",
+        "    #dirname has inconsistent behavior when path has a trailing slash\n",
+        "    full_containing_path = abspath(join(path, os.pardir))\n",
+        "    return basename(full_containing_path)\n",
+        "\n",
+        "def split_dataset_train_test(main_dir, train_dir, test_dir, test_percent,\n",
+        "                                           stratify=True, seed=None):\n",
+        "    prev_state = None\n",
+        "    if seed:\n",
+        "        prev_state = random.getstate()\n",
+        "        random.seed(seed)\n",
+        "    \n",
+        "    #Clean train and test directories\n",
+        "    #if train_dir.count('/') > 1:\n",
+        "    #    shutil.rmtree(train_dir, ignore_errors=False)\n",
+        "    #    os.makedirs(train_dir)\n",
+        "    #    print(\"Train directory: \" + train_dir)\n",
+        "    #else:\n",
+        "    #    print(\"Did not delete train dir: \" + train_dir)\n",
+        "    \n",
+        "    #if test_dir.count('/') > 1:\n",
+        "    #    shutil.rmtree(test_dir, ignore_errors=False)\n",
+        "    #    os.makedirs(test_dir)\n",
+        "    #    print(\"Test directory: \" + test_dir)\n",
+        "    #else:\n",
+        "    #    print(\"Did not delete test dir: \" + test_dir)\n",
+        "\n",
+        "    files_per_class = defaultdict(list)\n",
+        "\n",
+        "    for subdir, dirs, files in os.walk(main_dir):\n",
+        "        category_name = basename(subdir)\n",
+        "\n",
+        "        #Don't create a subdirectory for the root directories\n",
+        "        if category_name in map(basename, [main_dir, train_dir, test_dir]):\n",
+        "            continue\n",
+        "\n",
+        "        # filtered past top-level dirs, now we're in a category dir\n",
+        "        files_per_class[category_name].extend([join(abspath(subdir), file) for file in files])\n",
+        "\n",
+        "    # keep track of train/validation split for each category\n",
+        "    split_per_category = defaultdict(lambda: defaultdict(int))\n",
+        "    # create train/validation directories for each class\n",
+        "    class_directories_by_type = defaultdict(lambda: defaultdict(str))\n",
+        "    for category in files_per_class.keys():\n",
+        "        training_data_category_dir = join(train_dir, category)\n",
+        "        if not exists(training_data_category_dir):\n",
+        "            os.mkdir(training_data_category_dir)\n",
+        "        class_directories_by_type['train'][category] = training_data_category_dir\n",
+        "\n",
+        "        testing_data_category_dir = join(test_dir, category)\n",
+        "        if not exists(testing_data_category_dir):\n",
+        "            os.mkdir(testing_data_category_dir)\n",
+        "        class_directories_by_type['validation'][category] = testing_data_category_dir\n",
+        "\n",
+        "    if stratify:\n",
+        "        for category, files in files_per_class.items():\n",
+        "\n",
+        "            random.shuffle(files)\n",
+        "            last_index = math.ceil(len(files) * test_percent)\n",
+        "            # print('files upto index {} to val'.format(last_index))\n",
+        "            # print('category {} train/validation: {}/{}'.format(category, len(files[:last_index]),\n",
+        "            #                                                    len(files[last_index:])))\n",
+        "            for file in files[:last_index]:\n",
+        "                testing_data_category_dir = class_directories_by_type['validation'][category]\n",
+        "                # print('moving {} to {}'.format(file, join(testing_data_category_dir, basename(file))))\n",
+        "                shutil.move(file, join(testing_data_category_dir, basename(file)))\n",
+        "                split_per_category['validation'][category] += 1\n",
+        "            for file in files[last_index:]:\n",
+        "                training_data_category_dir = class_directories_by_type['train'][category]\n",
+        "                # print('moving {} to {}'.format(file, join(training_data_category_dir, basename(file))))\n",
+        "                shutil.move(file, join(training_data_category_dir, basename(file)))\n",
+        "                split_per_category['train'][category] += 1\n",
+        "\n",
+        "    else:  # not stratified, move a fraction of all files to validation\n",
+        "        files = []\n",
+        "        for file_list in files_per_class.values():\n",
+        "            files.extend(file_list)\n",
+        "\n",
+        "        random.shuffle(files)\n",
+        "        last_index = math.ceil(len(files) * test_percent)\n",
+        "        for file in files[:last_index]:\n",
+        "            category = get_containing_folder_name(file)\n",
+        "            directory = class_directories_by_type['validation'][category]\n",
+        "            shutil.move(file, join(directory, basename(file)))\n",
+        "            split_per_category['validation'][category] += 1\n",
+        "        for file in files[last_index:]:\n",
+        "            category = get_containing_folder_name(file)\n",
+        "            directory = class_directories_by_type['train'][category]\n",
+        "            shutil.move(file, join(directory, basename(file)))\n",
+        "            split_per_category['train'][category] += 1\n",
+        "\n",
+        "    if seed:\n",
+        "        random.setstate(prev_state)\n",
+        "    return split_per_category"
       ],
       "execution_count": 0,
       "outputs": []
