--- a/final_project2.ipynb
+++ b/final_project2.ipynb
@@ -153,7 +153,7 @@
       "metadata": {
         "id": "59jglJ_lqx8a",
         "colab_type": "code",
-        "outputId": "38c975bb-94b2-497d-a8b0-4133eb0345a0",
+        "outputId": "be2e90b7-fe1d-4bd5-deff-29289736c008",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -181,7 +181,7 @@
         "assert width * slide.level_downsamples[7] == slide.level_dimensions[0][0]\n",
         "assert height * slide.level_downsamples[7] == slide.level_dimensions[0][1]"
       ],
-      "execution_count": 5,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,10 +403,10 @@
       "metadata": {
         "id": "14W75yz8wOcz",
         "colab_type": "code",
-        "outputId": "0ee26da6-3d5f-4db4-a585-bc23dc9bb149",
+        "outputId": "6f3fafda-b239-401a-db62-1a5004b6a707",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 301
+          "height": 759
         }
       },
       "source": [
@@ -414,24 +414,52 @@
         "# Notice we're multiplying the x,y coordinates by the downsample factor.\n",
         "# This math can be tricky to get right, debug carefully.\n",
         "# Here, we're \"aiming\" for the top right blob in the image above.\n",
-        "region = read_slide(tumor_mask, x=350 * 128, y=120 * 128, level=7, width=50, height=50)[:,:,0]\n",
+        "region = read_slide(tumor_mask, x=355 * 128, y=140 * 128, level=7, width=30, height=30)[:,:,0]\n",
         "plt.imshow(region)\n",
-        "print(region[40])"
+        "for i in range(1,30):\n",
+        "  print(region[i])"
       ],
-      "execution_count": 9,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0\n",
-            " 0 0 0 0 0 0 0 0 0 0 0 0 0]\n"
+            "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 1 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0]\n",
+            "[0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 0 1 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "[0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "display_data",
           "data": {
-            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPsAAAD6CAYAAABnLjEDAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4xLjIsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy8li6FKAAALb0lEQVR4nO3dX4il9X3H8fen+zd/EDWVZbsr1dKl\nwYtWYTAGexG0UmskehFKJJS9WNibFAxJSW0LhUAvkpuYXLQJS5TsRYgmGlAkJdjthhAoq5torLok\nboSQtavbYsVY6MZNvr2YRxm3sztnz785s9/3Cw7z/Dlnng8yH3/n9zvPzKaqkHTx+631DiBpPiy7\n1IRll5qw7FITll1qwrJLTUxU9iS3JvlJkuNJ7plWKEnTl3E/Z0+yCfgpcAtwAngSuKuqnj/Xa7Zm\nW23nPWNdT9La/pf/4Vd1Oqud2zzB970eOF5VLwIkeQC4Azhn2bfzHj6Qmye4pKTzOVKHznlukrfx\nu4BfrNg/MRyTtIAmGdlHkmQ/sB9gO++e9eUkncMkI/tLwJUr9ncPx96hqg5U1VJVLW1h2wSXkzSJ\nScr+JLAnydVJtgIfAx6dTixJ0zb22/iqOpPkL4HvApuA+6vquaklkzRVE83Zq+o7wHemlEXSDHkH\nndSEZZeasOxSE5ZdasKyS01YdqkJyy41YdmlJiy71IRll5qw7FITll1qwrJLTVh2qQnLLjVh2aUm\nLLvUhGWXmrDsUhOWXWrCsktNWHapCcsuNWHZpSYsu9SEZZeasOxSE5ZdasKyS01YdqkJyy41Ydml\nJiy71IRll5qw7FITa5Y9yf1JTiV5dsWxy5M8nuSF4etls40paVKjjOxfA24969g9wKGq2gMcGvYl\nLbA1y15V3wdePevwHcDBYfsgcOeUc0mass1jvm5HVZ0ctl8GdpzriUn2A/sBtvPuMS8naVITL9BV\nVQF1nvMHqmqpqpa2sG3Sy0ka07hlfyXJToDh66npRZI0C+OW/VFg77C9F3hkOnEkzcooH719A/g3\n4A+SnEiyD/gccEuSF4A/GfYlLbA1F+iq6q5znLp5ylkkzZB30ElNWHapCcsuNWHZpSYsu9SEZZea\nsOxSE5ZdasKyS01YdqkJyy41YdmlJiy71IRll5qw7FITll1qwrJLTVh2qQnLLjVh2aUmLLvUhGWX\nmrDsUhOWXWrCsktNWHapCcsuNWHZpSYsu9SEZZeasOxSE5ZdasKyS01YdqmJNcue5Mokh5M8n+S5\nJHcPxy9P8niSF4avl80+rqRxjTKynwE+XVXXADcAn0hyDXAPcKiq9gCHhn1JC2rNslfVyar60bD9\nS+AYsAu4Azg4PO0gcOesQkqa3AXN2ZNcBVwHHAF2VNXJ4dTLwI6pJpM0VSOXPcl7gYeBT1bV6yvP\nVVUBdY7X7U9yNMnRNzk9UVhJ4xup7Em2sFz0r1fVt4fDryTZOZzfCZxa7bVVdaCqlqpqaQvbppFZ\n0hhGWY0PcB9wrKq+sOLUo8DeYXsv8Mj040mals0jPOdG4C+Af0/y9HDsb4HPAd9Msg/4OfDns4ko\naRrWLHtV/QDIOU7fPN04kmbFO+ikJiy71IRll5qw7FITll1qwrJLTVh2qQnLLjVh2aUmLLvUhGWX\nmrDsUhOWXWrCsktNWHapCcsuNWHZpSYsu9SEZZeasOxSE5ZdasKyS01YdqkJyy41YdmlJiy71IRl\nl5qw7FITll1qwrJLTVh2qQnLLjVh2aUmLLvUhGWXmliz7Em2J3kiyY+TPJfks8Pxq5McSXI8yYNJ\nts4+rqRxbR7hOaeBm6rqjSRbgB8k+WfgU8C9VfVAkq8A+4AvzzDrTH33P57+f8f+9HeuXYck0mys\nObLXsjeG3S3Do4CbgIeG4weBO2eSUNJUjDRnT7IpydPAKeBx4GfAa1V1ZnjKCWDXOV67P8nRJEff\n5PQ0Mksaw0hlr6pfV9W1wG7geuD9o16gqg5U1VJVLW1h25gxJU1qlDn726rqtSSHgQ8ClybZPIzu\nu4GXZhFwPa02j1+L83wtqlFW469Icumw/S7gFuAYcBj46PC0vcAjswopaXKjjOw7gYNJNrH8P4dv\nVtVjSZ4HHkjyD8BTwH0zzClpQmuWvaqeAa5b5fiLLM/fJW0A3kEnNXFBC3Ra21qLei7gab04sktN\nWHapCcsuNeGcfc5GuVHHeb1mwZFdasKyS01YdqkJ5+yD1ebJ4/wizDQ4r9csOLJLTVh2qQnLLjVh\n2aUmXKA7j7MXwdZrwW41Z2dxwU5rcWSXmrDsUhOWXWrCOftFwn/RRmtxZJeasOxSE5ZdasI5+0XM\nz+K1kiO71IRll5qw7FITll1qwgW6RvwLOL05sktNWHapCcsuNeGcXe/gv0J78XJkl5qw7FITI5c9\nyaYkTyV5bNi/OsmRJMeTPJhk6+xiSprUhczZ7waOAZcM+58H7q2qB5J8BdgHfHnK+RbKIv8Bynnx\nj2RsXCON7El2Ax8GvjrsB7gJeGh4ykHgzlkElDQdo76N/yLwGeA3w/77gNeq6sywfwLYtdoLk+xP\ncjTJ0Tc5PVFYSeNbs+xJbgdOVdUPx7lAVR2oqqWqWtrCtnG+haQpGGXOfiPwkSS3AdtZnrN/Cbg0\nyeZhdN8NvDS7mJImlaoa/cnJh4C/qqrbk3wLeHjFAt0zVfVP53v9Jbm8PpCbJwq86Dou2p3NBbv1\nc6QO8Xq9mtXOTfI5+18Dn0pynOU5/H0TfC9JM3ZBt8tW1feA7w3bLwLXTz+SpFnwDjqpCX8RZsq8\n8ca/aruoHNmlJiy71IRll5pwzn4ezj11MXFkl5qw7FITll1qwrJLTbhANxjl5peON8iMw4XMxeTI\nLjVh2aUmLLvUhGWXmrDsUhOWXWrCsktNWHapCW+qGax2I4g30ehi4sguNWHZpSYsu9SEc/bz8C/F\njsZffNkYHNmlJiy71IRll5pwzn4BNtocfpy8zr8vXo7sUhOWXWrCsktNWHapCRfoLsCiL8itxcW3\n3hzZpSYsu9SEZZeaSFXN72LJfwI/B34b+K+5XXgyGykrbKy8GykrbIy8v1tVV6x2Yq5lf/uiydGq\nWpr7hcewkbLCxsq7kbLCxst7Nt/GS01YdqmJ9Sr7gXW67jg2UlbYWHk3UlbYeHnfYV3m7JLmz7fx\nUhNzLXuSW5P8JMnxJPfM89qjSHJ/klNJnl1x7PIkjyd5Yfh62XpmfEuSK5McTvJ8kueS3D0cX9S8\n25M8keTHQ97PDsevTnJk+Jl4MMnW9c76liSbkjyV5LFhf2GzjmJuZU+yCfhH4M+Aa4C7klwzr+uP\n6GvArWcduwc4VFV7gEPD/iI4A3y6qq4BbgA+Mfz3XNS8p4GbquqPgGuBW5PcAHweuLeqfh/4b2Df\nOmY8293AsRX7i5x1TfMc2a8HjlfVi1X1K+AB4I45Xn9NVfV94NWzDt8BHBy2DwJ3zjXUOVTVyar6\n0bD9S5Z/KHexuHmrqt4YdrcMjwJuAh4aji9M3iS7gQ8DXx32w4JmHdU8y74L+MWK/RPDsUW3o6pO\nDtsvAzvWM8xqklwFXAccYYHzDm+LnwZOAY8DPwNeq6ozw1MW6Wfii8BngN8M++9jcbOOxAW6C1DL\nH10s1McXSd4LPAx8sqpeX3lu0fJW1a+r6lpgN8vv9N6/zpFWleR24FRV/XC9s0zTPH+f/SXgyhX7\nu4dji+6VJDur6mSSnSyPSgshyRaWi/71qvr2cHhh876lql5Lchj4IHBpks3DiLkoPxM3Ah9Jchuw\nHbgE+BKLmXVk8xzZnwT2DCuaW4GPAY/O8frjehTYO2zvBR5ZxyxvG+aQ9wHHquoLK04tat4rklw6\nbL8LuIXldYbDwEeHpy1E3qr6m6raXVVXsfxz+q9V9XEWMOsFqaq5PYDbgJ+yPFf7u3lee8R83wBO\nAm+yPCfbx/Jc7RDwAvAvwOXrnXPI+scsv0V/Bnh6eNy2wHn/EHhqyPss8PfD8d8DngCOA98Ctq13\n1rNyfwh4bCNkXevhHXRSEy7QSU1YdqkJyy41YdmlJiy71IRll5qw7FITll1q4v8AujhcfZhCzYgA\nAAAASUVORK5CYII=\n",
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPsAAAD5CAYAAADhukOtAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4xLjIsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy8li6FKAAALmklEQVR4nO3dX6ic9ZnA8e+z9hjxT8HUbcimoemK\nN0VoXA7pQmVxkXatFKI3obkoWZCeXlSo0IsV96JeSqmWXglxDU2La1tQMRfS1oaC7E0wSjZGs21d\niTTZY9KSQuzC+vfpxbwp0+w5M+PM+847nuf7gcOZ886cM48vfvPOzG/+RGYiaeP7q74HkDQfxi4V\nYexSEcYuFWHsUhHGLhXxkVl+OSJuA74HXAb8W2Y+MOryl8emvIKrZrlKSSP8H//L2/lWrHVeTLvO\nHhGXAb8GPg+cBp4H9mbmK+v9zkdjc342bp3q+iSNdyQPcyHPrxn7LDfjdwGvZuZrmfk28CNg9wx/\nT1KHZol9G/DboZ9PN9skLaCZ7rNPIiJWgBWAK7iy66uTtI5ZjuxngO1DP3+i2fYXMnN/Zi5n5vIS\nm2a4OkmzmCX254EbIuJTEXE58GXgUDtjSWrb1DfjM/PdiLgb+BmDpbcDmflya5NJatVM99kz8xng\nmZZmkdQhn0EnFWHsUhHGLhVh7FIRxi4VYexSEcYuFWHsUhHGLhVh7FIRxi4VYexSEcYuFWHsUhHG\nLhVh7FIRxi4VYexSEcYuFWHsUhHGLhVh7FIRxi4VYexSEcYuFWHsUhHGLhUx02e9RcQp4E3gPeDd\nzFxuYyhJ7Zsp9sY/ZubvW/g7kjrkzXipiFljT+DnEfFCRKy0MZCkbsx6M/7mzDwTER8Hno2I/8rM\n54Yv0PwjsAJwBVfOeHWSpjXTkT0zzzTfzwFPAbvWuMz+zFzOzOUlNs1ydZJmMHXsEXFVRFxz8TTw\nBeBEW4NJatcsN+O3AE9FxMW/8++Z+dNWppLUuqljz8zXgM+0OIukDrn0JhVh7FIRxi4VYexSEcYu\nFWHsUhHGLhVh7FIRxi4VYexSEcYuFWHsUhHGLhVh7FIRxi4VYexSEcYuFWHsUhHGLhVh7FIRxi4V\nYexSEcYuFWHsUhHGLhVh7FIRxi4VYexSEWM/2DEiDgBfAs5l5o3Nts3Aj4EdwClgT2b+obsxp/ez\n/zm27nn/9Dc75ziJ1K9JjuzfB267ZNu9wOHMvAE43PwsaYGNjT0znwPOX7J5N3CwOX0QuKPluSS1\nbNrPZ9+SmavN6TeALetdMCJWgBWAK7hyyquTNKuZH6DLzARyxPn7M3M5M5eX2DTr1Uma0rSxn42I\nrQDN93PtjSSpC9PGfgjY15zeBzzdzjiSujLJ0tvjwC3AdRFxGvgW8ADwk4i4C3gd2NPlkF0ZtSw3\nC5f0tIjGxp6Ze9c569aWZ5HUIZ9BJxVh7FIRxi4VYexSEcYuFTHt02U1wixLei7bqSse2aUijF0q\nwtilIoxdKsLYpSKMXSrCpbcFM+2ynUt2Gscju1SEsUtFGLtUhLFLRRi7VISxS0UYu1TEhl9nH7X+\n3NW7y/bBl9VqHI/sUhHGLhVh7FIRxi4VYexSEcYuFTHJBzseAL4EnMvMG5tt9wNfBX7XXOy+zHym\nqyG7Mm7JaSMtzY0y6r/TZbmNY5Ij+/eB29bY/t3M3Nl8fehCl6oZG3tmPgecn8Mskjo0y332uyPi\neEQciIhrW5tIUiemjf1h4HpgJ7AKPLjeBSNiJSKORsTRd3hryquTNKupYs/Ms5n5Xma+DzwC7Bpx\n2f2ZuZyZy0tsmnZOSTOaKvaI2Dr0453AiXbGkdSVSZbeHgduAa6LiNPAt4BbImInkMAp4Gsdzqge\nuSy3cYyNPTP3rrH50Q5mkdQhn0EnFWHsUhHGLhVh7FIRxi4VYexSERv+3WXVnXEvAXYdfrF4ZJeK\nMHapCGOXijB2qQhjl4owdqkIl97UmWnfndclu254ZJeKMHapCGOXijB2qQhjl4owdqkIl960cGb5\nQE2X7dbnkV0qwtilIoxdKsLYpSKMXSrC2KUiJvlgx+3AD4AtDD7IcX9mfi8iNgM/BnYw+HDHPZn5\nh+5Gnb9RyzizLA+pO34Q5fomObK/C3wzMz8N/D3w9Yj4NHAvcDgzbwAONz9LWlBjY8/M1cx8sTn9\nJnAS2AbsBg42FzsI3NHVkJJm94Hus0fEDuAm4AiwJTNXm7PeYHAzX9KCmjj2iLgaeAK4JzMvDJ+X\nmcng/vxav7cSEUcj4ug7vDXTsJKmN1HsEbHEIPTHMvPJZvPZiNjanL8VOLfW72bm/sxczszlJTa1\nMbOkKYyNPSICeBQ4mZkPDZ11CNjXnN4HPN3+eJLaMsmr3j4HfAV4KSIurmvcBzwA/CQi7gJeB/Z0\nM6KkNsTg7vZ8fDQ252fj1rldX19cg//w2Shr8EfyMBfyfKx1ns+gk4owdqkIY5eKMHapCGOXijB2\nqQjfXbYDvjT2w6fCS2M9sktFGLtUhLFLRRi7VISxS0UYu1RE6aW3cctgG2XJRQKP7FIZxi4VYexS\nEcYuFWHsUhHGLhWx4ZfeZnmVma9Qq6PCMqtHdqkIY5eKMHapCGOXijB2qQhjl4qY5FNct0fELyPi\nlYh4OSK+0Wy/PyLORMSx5uv27seVNK1J1tnfBb6ZmS9GxDXACxHxbHPedzPzO92NJ6ktY2PPzFVg\ntTn9ZkScBLZ1PZikdn2g++wRsQO4CTjSbLo7Io5HxIGIuLbl2SS1aOLYI+Jq4Angnsy8ADwMXA/s\nZHDkf3Cd31uJiKMRcfQd3mphZEnTmCj2iFhiEPpjmfkkQGaezcz3MvN94BFg11q/m5n7M3M5M5eX\n2NTW3JI+oEkejQ/gUeBkZj40tH3r0MXuBE60P56ktkzyaPzngK8AL0XExZeB3QfsjYidQAKngK91\nMqGkVkzyaPx/ALHGWc+0P077/JBFacBn0ElFGLtUhLFLRRi7VISxS0UYu1TEhn932VHGvaOoS3Mb\nS4V3kB3FI7tUhLFLRRi7VISxS0UYu1SEsUtFlF56G8dXzI3W1dJl9SWyrnhkl4owdqkIY5eKMHap\nCGOXijB2qQhjl4pwnX0E19Jn43r5YvHILhVh7FIRxi4VYexSEcYuFWHsUhGRmfO7sojfAa8PbboO\n+P3cBhjPeUZbtHlg8Wbqe55PZuZfr3XGXGP/f1cecTQzl3sb4BLOM9qizQOLN9OizTPMm/FSEcYu\nFdF37Pt7vv5LOc9oizYPLN5MizbPn/V6n13S/PR9ZJc0J73EHhG3RcSvIuLViLi3jxkumedURLwU\nEcci4mhPMxyIiHMRcWJo2+aIeDYiftN8v7bnee6PiDPNfjoWEbfPcZ7tEfHLiHglIl6OiG8023vZ\nRyPm6W0fjTP3m/ERcRnwa+DzwGngeWBvZr4y10H+cqZTwHJm9rY+GhH/APwR+EFm3ths+zZwPjMf\naP5RvDYz/6XHee4H/piZ35nHDJfMsxXYmpkvRsQ1wAvAHcA/08M+GjHPHnraR+P0cWTfBbyama9l\n5tvAj4DdPcyxUDLzOeD8JZt3Aweb0wcZ/M/U5zy9yczVzHyxOf0mcBLYRk/7aMQ8C6uP2LcBvx36\n+TT976QEfh4RL0TESs+zDNuSmavN6TeALX0O07g7Io43N/PndrdiWETsAG4CjrAA++iSeWAB9tFa\nfIBu4ObM/Dvgi8DXm5uwCyUH97f6Xjp5GLge2AmsAg/Oe4CIuBp4ArgnMy8Mn9fHPlpjnt730Xr6\niP0MsH3o508023qTmWea7+eApxjc1VgEZ5v7hhfvI57rc5jMPJuZ72Xm+8AjzHk/RcQSg7Aey8wn\nm8297aO15ul7H43SR+zPAzdExKci4nLgy8ChHuYAICKuah5gISKuAr4AnBj9W3NzCNjXnN4HPN3j\nLBdjuuhO5rifIiKAR4GTmfnQ0Fm97KP15ulzH42VmXP/Am5n8Ij8fwP/2scMQ7P8LfCfzdfLfc0D\nPM7gZt87DB7HuAv4GHAY+A3wC2Bzz/P8EHgJOM4gsq1znOdmBjfRjwPHmq/b+9pHI+bpbR+N+/IZ\ndFIRPkAnFWHsUhHGLhVh7FIRxi4VYexSEcYuFWHsUhF/AvQzrWbkqooTAAAAAElFTkSuQmCC\n",
             "text/plain": [
               "<Figure size 432x288 with 1 Axes>"
             ]
@@ -1103,20 +1131,28 @@
       "metadata": {
         "id": "pcEcLo0S_70f",
         "colab_type": "code",
-        "outputId": "0534e314-8f97-435a-e2fe-d4c333d401bd",
+        "outputId": "737629be-1a6c-4606-dfef-141f914f883c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 669
+          "height": 686
         }
       },
       "source": [
         "import pandas as pd\n",
         "\n",
         "trial_df = pd.DataFrame(trial_data)\n",
+        "print('Number of patches:', len(trial_df))\n",
         "trial_df.iloc[90:110]"
       ],
-      "execution_count": 15,
+      "execution_count": 31,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Number of patches: 338\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -1382,7 +1418,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 31
         }
       ]
     },
@@ -2140,7 +2176,7 @@
         "colab_type": "text"
       },
       "source": [
-        "So it looks like we are left with roughly 1200 tumor samples for train and validation.  So we will random sample 1300 non tumor patches and use all tumor patches for our dataset."
+        "So it looks like we are left with roughly 1200 tumor samples for train and validation.  So we will random sample 1300 non-cancer tumor patches and use all tumor patches for our dataset."
       ]
     },
     {
